fixing overflow on windows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,12 +239,15 @@
 
 /* Context Resetting */
 
+html {
+  overflow-y: hidden;
+}
+
 html, body {
   margin: 0;
   padding: 0;
   width: 100vw;
   height: 100vh;
-  overflow-y: scroll;
 }
 
 /* Background Images */
